# quantago

./: .env.example  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  LICENSE  QUICKSTART.md  README.md  SETUP_COMPLETE.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  setup.sh
.github/: DEPLOYMENT.md  SECRETS.md
.github/workflows/: deploy.yml  pr-check.yml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  QUICKSTART.md  SECRETS.md  STRATEGY_PROTOCOL.md  intro.md
docs/api/: authentication.md  backtests.md  market-data.md  rest-api.md  strategies.md
docs/concepts/: how-it-works.md
docs/runtimes/: python-sdk.md  wasm.md
docs/self-hosting/: overview.md
docs/standards/: backend-standards.md  component-standards.md  zustand-standards.md
infra/: Pulumi.prod.yaml  Pulumi.yaml  README.md  index.ts  package.json
scripts/: deploy-admin.sh  deploy-backend.sh  deploy-docs.sh  deploy-frontend.sh  deploy-landing.sh
sdks/python/: README.md  pyproject.toml
sdks/python/examples/: moving_average_strategy.py
sdks/python/quantago/: __init__.py  cli.py  models.py  server.py  strategy.py
services/admin/: .env.example  README.md  package.json
services/backend/: eslint.config.js  package.json  tsconfig.json  wrangler.jsonc
services/docs/: docusaurus.config.ts  package.json  sidebars.ts
services/frontend/: index.html  package.json
services/landing/: eslint.config.js  package.json  tsconfig.json  wrangler.jsonc
strategies/: helpers.ts  index.ts
strategies/bollinger-bands-strategy/: index.ts  manifest.json
strategies/breakout-strategy/: index.ts  (+1 more)
(+62 files in other folders)
