[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantago"
version = "0.1.0"
description = "Quantago Strategy Protocol SDK for Python"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Quantago" }
]
dependencies = []

[project.scripts]
quantago = "quantago.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["quantago*"]